--- a/Caddyfile
+++ b/Caddyfile
@@ -3,7 +3,6 @@
 	root * /app/dist
 	
 	# IMPORTANTE: Configurar tipos MIME ANTES de file_server
-	# Para archivos JavaScript (todos los .js y .mjs)
 	header {
 		# Headers de seguridad primero
 		X-Content-Type-Options "nosniff"
@@ -11,16 +10,38 @@
 		X-XSS-Protection "1; mode=block"
 	}
 	
-	# Matcher para archivos JavaScript
+	# Interceptar /index.tsx ANTES de file_server
+	@index_tsx {
+		path /index.tsx
+	}
+	handle @index_tsx {
+		rewrite * /assets/main-y7AYQDTU.js
+		header Content-Type "application/javascript; charset=utf-8"
+		file_server
+	}
+	
+	# Matcher para archivos .tsx - servir como JavaScript (fallback)
+	@tsx {
+		file
+		path *.tsx
+	}
+	handle @tsx {
+		header Content-Type "application/javascript; charset=utf-8"
+		file_server
+	}
+	
+	# Matcher para archivos JavaScript - DEBE incluir /assets/
 	@js {
 		file
 		path *.js
+		path /assets/*.js
 	}
 	header @js Content-Type "application/javascript; charset=utf-8"
 	
 	@mjs {
 		file
 		path *.mjs
+		path /assets/*.mjs
 	}
 	header @mjs Content-Type "application/javascript; charset=utf-8"
 	
@@ -28,6 +49,7 @@
 	@css {
 		file
 		path *.css
+		path /assets/*.css
 	}
 	header @css Content-Type "text/css; charset=utf-8"
 	
