--- a/.nixpacks/assets/Caddyfile
+++ b/.nixpacks/assets/Caddyfile
@@ -10,25 +10,15 @@
 		X-XSS-Protection "1; mode=block"
 	}
 	
-	# Interceptar /index.tsx ANTES de file_server
-	@index_tsx {
-		path /index.tsx
-	}
-	handle @index_tsx {
-		rewrite * /assets/main-y7AYQDTU.js
-		header Content-Type "application/javascript; charset=utf-8"
-		file_server
-	}
+	# Interceptar /index.tsx y redirigir al JS compilado ANTES de file_server
+	rewrite /index.tsx /assets/main-y7AYQDTU.js
 	
 	# Matcher para archivos .tsx - servir como JavaScript (fallback)
 	@tsx {
 		file
 		path *.tsx
 	}
-	handle @tsx {
-		header Content-Type "application/javascript; charset=utf-8"
-		file_server
-	}
+	header @tsx Content-Type "application/javascript; charset=utf-8"
 	
 	# Matcher para archivos JavaScript - DEBE incluir /assets/
 	@js {
