--- a/Caddyfile
+++ b/Caddyfile
@@ -11,13 +11,8 @@
 	}
 	
 	# CRÍTICO: Interceptar /index.tsx ANTES de file_server
-	# Esto redirige cualquier solicitud a /index.tsx al JS compilado
-	@index_tsx {
-		path /index.tsx
-	}
-	handle @index_tsx {
-		# Buscar el archivo JS compilado dinámicamente
-		# Primero intentar con el nombre conocido
+	# Usar route en lugar de handle para mayor prioridad
+	route /index.tsx {
 		rewrite * /assets/main-y7AYQDTU.js
 		header Content-Type "application/javascript; charset=utf-8"
 		header Cache-Control "public, max-age=31536000, immutable"
