--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "postbuild": "node scripts/protect-dist.js",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port 80"
+    "start": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
