chore: Limpiar proyecto de archivos innecesarios
- Eliminar .easypanel.yml, easypanel.yml (no funcionaron)
- Eliminar .nixpacksignore (no necesario)
- Eliminar scripts/start.sh (ya no se usa, usamos server.js)
- Simplificar Dockerfile (quitar healthcheck y comentarios innecesarios)
- Limpiar .dockerignore de referencias obsoletas

--- a/.dockerignore
+++ b/.dockerignore
@@ -19,14 +19,9 @@ build
 .git
 .gitignore
 
-# Nixpacks (ignorar completamente)
+# Nixpacks (ya no se usa)
 .nixpacks
 nixpacks.toml
-.nixpacks/**
-
-# Caddyfile (no lo necesitamos)
-Caddyfile
-*.backup
 
 # IDE
 .vscode
